Added some basic setup files from github.com/Firenezz/Fall, completed some template todos and setup Code Owners

--- a/mobile/Cargo.toml
+++ b/mobile/Cargo.toml
@@ -9,7 +9,7 @@ name = "mobile"
 crate-type = ["staticlib", "cdylib"]
 
 [dependencies]
-bevy_game = { path = ".." } # ToDo
+nebula_astralis = { path = ".." } # ToDo
 bevy = { version = "0.16.0", default-features = false, features = ["android-native-activity"] }
 
 [target."cfg(target_os = \"ios\")".dependencies]
@@ -31,4 +31,4 @@ target_sdk_version = 35
 
 [package.metadata.android.application]
 icon = "@mipmap/icon"
-label = "Bevy Game" # ToDo
+label = "Nebula Astralis" # ToDo
