--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "nebula_astralis" # ToDo
+name = "nebula_astralis"
 version = "0.1.0"
 publish = false
-authors = ["Niklas Eicker <git@nikl.me>"] # ToDo: you are the author ;)
+authors = ["AzunaVT <azunavt@gmail.com>"]
 edition = "2021"
 exclude = ["dist", "build", "assets", "credits"]
 
